# pvp-ETHRome

./: .gitignore  README.md  build_contract.sh  generate.py  package-lock.json  update_dotenv.js
backend/: Cargo.toml  NOTICE
backend/gen_scripts/: be_gen_state_rs.py  gen_cfg.py
backend/src/: contract.rs  helpers.rs  instance.rs  instantiate.rs  lib.rs  rng.rs  state.rs  viewing_key.rs
backend/src/execute/: alias.rs  deal.rs  draw.rs  mod.rs  set_vk.rs
backend/src/query/: instance_state.rs  mod.rs
frontend/: .dockerignore  tailwind.config.js  tsconfig.json
frontend/components/: betting_table.tsx  controls.tsx  footer.tsx  hand.tsx  layout.js
frontend/gen_scripts/: fe_gen_constants_ts.py  gen_cfg.py  round_robin.ts
frontend/pages/: _app.tsx  dashboard.tsx  index.tsx  landingpage.tsx
frontend/src/: constants.tsx  helpers.tsx  interfaces.tsx  queries.ts  transactions.tsx
frontend/styles/: globals.css
