[package]
name = "secret-slots-backend"
version = "0.0.0-hackathon"
authors = [ "YAESHA256, Skrillah",]
edition = "2021"
exclude = [ "contract.wasm", "hash.txt",]

[lib]
crate-type = [ "cdylib", "rlib",]

[features]
default = []
library = []

[dependencies]
schemars = "0.8.11"
base64 = "0.12.3"
serde_json = "1.0.91"
signature = "1.5.0"

[dependencies.serde]
version = "1.0.147"
default-features = false
features = [ "derive",]

[dependencies.sha2]
version = "0.9.1"
default-features = false

[dependencies.cosmwasm-std]
version = "1.1.10"
package = "secret-cosmwasm-std"
features = [ "random",]

[dependencies.cosmwasm-storage]
version = "1.1.10"

[dependencies.secret-toolkit]
version = "0.9.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
